<resources>
    <string name="app_name">Sleep Therapy - Poster Fair Demo</string>
    <string name="title_activity_bridge_discovery">BridgeDiscoveryActivity</string>
    <string name="random_lights">Randomize Lights</string>
    <string name="toggle_lights">Toggle Lights</string>
    <string name="turn_on_hue">Turn On Lights</string>
    <string name="turn_off_hue">Turn Off Lights</string>
    <string name="rerun_bridge_discovery">Re-run bridge discovery</string>
    <string name="alarms">Alarms</string>
    <string name="history">History</string>
    <string name="setup_hue">Setup Hue</string>
    <string name="setup_tplink">Setup TPLink</string>
    <string name="sleep_tips">Sleep Tips</string>
    <string name="alarm_time">No Alarm Set</string>
    <string name="select_alarm_time">Select Alarm Time</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="devices_in_alarm">Devices to be used in the Alarm:</string>
    <string name="fade_in">Fade in time (minutes): </string>
    <string name="phone_sound">Phone Sound</string>
    <string name="hue_lights">Hue Lights</string>
    <string name="smartplug1">Smart Plug 1 - Heat Dish</string>
    <string name="smartplug2">Smart Plug 2 - Humidifier</string>
    <string name="watch_vibration">Smartwatch Vibration</string>
    <string name="alarm">Alarm! - Time to Wakeup</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="auth_smartplug">Authorize Smartplug</string>
    <string name="url_smartplug">Get Smartplug URL</string>
    <string name="on_smartplug1">Turn ON Smartplug 1</string>
    <string name="off_smartplug1">Turn OFF Smartplug 1</string>
    <string name="on_smartplug2">Turn ON Smartplug 2</string>
    <string name="off_smartplug2">Turn OFF Smartplug 2</string>
    <string name="sleep_tip_1">Set a schedule – go to bed and wake up at the same time each day</string>
    <string name="sleep_tip_2">Exercise 20 to 30 minutes a day but no later than a few hours before going to bed</string>
    <string name="sleep_tip_3">Avoid caffeine and nicotine late in the day and alcoholic drinks before bed</string>
    <string name="sleep_tip_4">Relax before bed – try a warm bath, reading, or another relaxing routine</string>
    <string name="sleep_tip_5">Create a room for sleep – avoid bright lights and loud sounds, keep the room at a comfortable temperature, and don’t watch TV or have a computer in your bedroom</string>
    <string name="sleep_tip_6">Don’t lie in bed awake.  If you can’t get to sleep, do something else, like reading or listening to music, until you feel tired</string>
    <string name="testing">Testing</string>
    <string-array name="alarm_fade_in_times">
        <item>2</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>
</resources>
