<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.philips.lighting.hue.demo.huequickstartapp.SetupTPLinkActivity"
    android:padding="16dp"
    android:background="#ffffff">

        <Button
            android:id="@+id/auth_smartplug_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_smartplug"
            android:visibility="gone"/>

        <Button
            android:id="@+id/url_smartplug_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url_smartplug"
            android:visibility="gone"/>

        <Button
            android:id="@+id/on_smartplug1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_smartplug1"/>

        <Button
            android:id="@+id/off_smartplug1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/off_smartplug1"/>

        <Button
            android:id="@+id/on_smartplug2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_smartplug2"/>

        <Button
            android:id="@+id/off_smartplug2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/off_smartplug2"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connect"
            android:id="@+id/buttonStart"
            android:layout_below="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClickStart"/>

        <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Monitor"-->
        <!--android:id="@+id/buttonSend"-->
        <!--android:onClick="onClickSend"-->
        <!--android:layout_below="@+id/editText"-->
        <!--android:layout_toRightOf="@+id/buttonStart"-->
        <!--android:layout_toEndOf="@+id/buttonStart" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_below="@+id/buttonStop"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/editText"
            android:layout_alignEnd="@+id/editText"
            android:layout_alignParentBottom="true"
            android:maxLines="20" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stop"
            android:id="@+id/buttonStop"
            android:layout_below="@+id/editText"
            android:layout_toRightOf="@+id/buttonStart"
            android:layout_toEndOf="@+id/buttonStart"
            android:onClick="onClickStop"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear"
            android:id="@+id/buttonClear"
            android:layout_below="@+id/editText"
            android:layout_toRightOf="@+id/buttonStop"
            android:layout_toEndOf="@+id/buttonStop"
            android:onClick="onClickClear"/>
    </RelativeLayout>
</LinearLayout>
