<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.philips.lighting.hue.demo.huequickstartapp.MainActivity"
        android:padding="16dp"
        android:background="#ffffff">

        <!--to implement navigation between tabs - want to have even spacing along bottom-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.philips.lighting.hue.demo.huequickstartapp.MainActivity"
            android:padding="16dp"
            android:background="#ffffff">

            <TextView
                android:id="@+id/alarms_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textAlignment="center"
                android:text="@string/alarms"/>

            <TextView
                android:id="@+id/hue_setup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textAlignment="center"
                android:text="@string/setup_hue"/>

            <TextView
                android:id="@+id/sleep_tips_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startSleepTips"
                android:padding="16dp"
                android:text="@string/sleep_tips"
                android:textAlignment="center" />

        </LinearLayout>



    </LinearLayout>
</ScrollView>